resolved issue with svg spilling out of parent div

--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ html {
 }
 svg {
   padding: 0vw 10vw 0vw 10vw;
+  overflow: visible;
+  max-height: 400px;
 }
 img {
   max-height: 200px;
